[gd_scene load_steps=11 format=4 uid="uid://lf14fgxx7cqd"]

[ext_resource type="PackedScene" uid="uid://c2dfb4hwnxkoh" path="res://Scenes/player.tscn" id="1_fqnt4"]
[ext_resource type="Script" path="res://Scripts/LevelManager.gd" id="1_uworl"]
[ext_resource type="Texture2D" uid="uid://2wlvexlgarvy" path="res://Assets/oak_woods_v1.0/oak_woods_tileset.png" id="2_80lr4"]
[ext_resource type="PackedScene" uid="uid://bi8ryknoiq3rn" path="res://Scenes/forest_parallax.tscn" id="2_ek1cm"]
[ext_resource type="PackedScene" uid="uid://dv573chcecse4" path="res://Scenes/killzone.tscn" id="3_26fjk"]
[ext_resource type="PackedScene" uid="uid://dh52xt071vywf" path="res://Scenes/slime.tscn" id="4_ly0ve"]
[ext_resource type="PackedScene" uid="uid://cpff1j72cjyar" path="res://Scenes/boss_slime.tscn" id="7_6iar6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yvq18"]
texture = ExtResource("2_80lr4")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
16:0/0 = 0
16:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
17:0/0 = 0
17:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:0/0 = 0
19:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
20:0/0 = 0
20:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 12, 12, 0.249718, 12, 12, -12, 12)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 0.124859, 12, -12, 12, 12, -12, 12)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, 0, 12, 12, -12, 12)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 0.124859, 12, 12, 12, 12, -12, 12)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 12, 12, 0.249718, 12, 12, -12, 12)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 0.124859, 12, -12, 12, 12, -12, 12)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, 0, 12, 12, -12, 12)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, 0.124859, 12, 12, 12, 12, -12, 12)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
5:11/0 = 0
5:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
6:11/0 = 0
6:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
7:11/0 = 0
7:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:11/0 = 0
0:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:12/0 = 0
0:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:13/0 = 0
0:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
0:14/0 = 0
0:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
1:14/0 = 0
1:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
1:13/0 = 0
1:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
1:12/0 = 0
1:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
2:12/0 = 0
2:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
3:12/0 = 0
3:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
3:13/0 = 0
3:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
2:13/0 = 0
2:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
5:13/0 = 0
5:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
6:13/0 = 0
6:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
7:13/0 = 0
7:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
8:13/0 = 0
8:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
9:13/0 = 0
9:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:13/0 = 0
10:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
11:13/0 = 0
11:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
12:13/0 = 0
12:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
13:13/0 = 0
13:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
14:13/0 = 0
14:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
5:14/0 = 0
5:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
6:14/0 = 0
6:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
7:14/0 = 0
7:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
8:14/0 = 0
8:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
9:14/0 = 0
9:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:14/0 = 0
10:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
11:14/0 = 0
11:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
12:14/0 = 0
12:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
12:10/0 = 0
12:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
13:10/0 = 0
13:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
12:8/0 = 0
12:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
13:8/0 = 0
13:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
12:6/0 = 0
12:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
9:7/0 = 0
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
9:9/0 = 0
9:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
9:10/0 = 0
9:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:6/0 = 0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:7/0 = 0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:8/0 = 0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
10:10/0 = 0
10:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
15:6/0 = 0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
15:8/0 = 0
15:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
16:8/0 = 0
16:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
15:10/0 = 0
15:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
15:11/0 = 0
15:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
16:13/0 = 0
16:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
17:13/0 = 0
17:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
18:13/0 = 0
18:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:13/0 = 0
19:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
20:13/0 = 0
20:13/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
18:14/0 = 0
18:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:14/0 = 0
19:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
20:14/0 = 0
20:14/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
18:5/0 = 0
18:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
18:6/0 = 0
18:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
18:7/0 = 0
18:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
18:8/0 = 0
18:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
18:9/0 = 0
18:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
18:10/0 = 0
18:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
18:11/0 = 0
18:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
18:12/0 = 0
18:12/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:5/0 = 0
19:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:6/0 = 0
19:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:7/0 = 0
19:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:8/0 = 0
19:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:9/0 = 0
19:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:10/0 = 0
19:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:11/0 = 0
19:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
14:3/0 = 0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
16:3/0 = 0
16:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
17:3/0 = 0
17:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
17:2/0 = 0
17:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:1/0 = 0
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
19:2/0 = 0
19:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
20:2/0 = 0
20:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)
20:1/0 = 0
20:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)

[sub_resource type="TileSet" id="TileSet_cqcdt"]
tile_size = Vector2i(24, 24)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_yvq18")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jpru3"]
distance = -133.0

[node name="Game" type="Node2D"]
script = ExtResource("1_uworl")

[node name="ForestParallax" parent="." instance=ExtResource("2_ek1cm")]
position = Vector2(0, -260)

[node name="Player" parent="." instance=ExtResource("1_fqnt4")]
visibility_layer = 7
z_as_relative = false
position = Vector2(38, 0)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(1, -34)
zoom = Vector2(2.5, 2.5)
limit_bottom = 90
limit_smoothed = true
position_smoothing_enabled = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9/wAAAAAAAAAAAAD+/wAAAAABAAAAAAD//wAAAAABAAAAAAAAAAAAAAABAAAAAAABAAAAAAABAAAAAAACAAAAAAABAAAAAAADAAAAAAABAAAAAAAEAAAAAAACAAAAAAAFAAAAAAACAAAAAAAGAAAAAAACAAAAAAAHAAAAAAACAAAAAAAIAAAAAAACAAAAAAAJAAAAAAACAAAAAAAKAAAAAAABAAAAAAAKAAEAAAABAAEAAAAKAAIAAAABAAEAAAAJAAMAAAACAAMAAAAIAAMAAAACAAMAAAAHAAMAAAACAAMAAAAGAAMAAAACAAMAAAAFAAMAAAACAAMAAAAEAAMAAAACAAMAAAADAAMAAAABAAMAAAACAAMAAAABAAMAAAABAAMAAAABAAMAAAAAAAMAAAABAAMAAAD//wMAAAABAAMAAAD+/wMAAAABAAMAAAD9/wMAAAAAAAMAAAD9/wIAAAAAAAIAAAD9/wEAAAAAAAEAAAD+/wEAAAABAAEAAAD//wEAAAABAAEAAAAAAAEAAAABAAEAAAABAAEAAAABAAEAAAACAAEAAAABAAEAAAADAAEAAAABAAEAAAAEAAEAAAABAAEAAAAFAAEAAAABAAEAAAAGAAEAAAABAAEAAAAHAAEAAAABAAEAAAAIAAEAAAABAAEAAAAJAAEAAAABAAEAAAAJAAIAAAABAAEAAAAIAAIAAAABAAEAAAAHAAIAAAABAAEAAAAGAAIAAAABAAEAAAAFAAIAAAABAAEAAAAEAAIAAAABAAEAAAADAAIAAAABAAEAAAACAAIAAAABAAEAAAABAAIAAAABAAEAAAAAAAIAAAABAAEAAAD//wIAAAABAAEAAAD+/wIAAAABAAEAAAANAAAAAAADAAAAAAANAAEAAAADAAEAAAANAAIAAAADAAIAAAASAAAAAAAGAAAAAAATAAAAAAAGAAAAAAAUAAAAAAAGAAAAAAAVAAAAAAAHAAAAAAAWAAAAAAAHAAAAAAAXAAAAAAAHAAAAAAAYAAAAAAAIAAAAAAAYAAEAAAADAAEAAAAYAAIAAAADAAIAAAAYAAMAAAADAAMAAAAXAAMAAAACAAMAAAAWAAMAAAACAAMAAAAVAAMAAAACAAMAAAAUAAMAAAABAAMAAAATAAMAAAABAAMAAAASAAMAAAABAAMAAAARAAIAAAABAAEAAAARAAEAAAABAAEAAAASAAEAAAABAAEAAAATAAEAAAABAAEAAAAUAAEAAAABAAEAAAAVAAEAAAABAAEAAAAWAAEAAAABAAEAAAAXAAEAAAABAAEAAAAXAAIAAAABAAEAAAAWAAIAAAABAAEAAAAVAAIAAAABAAEAAAAUAAIAAAABAAEAAAATAAIAAAABAAEAAAASAAIAAAABAAEAAAALAAAAAAABAAAAAAAMAAAAAAABAAAAAAAQAAAAAAAFAAAAAAALAAEAAAABAAEAAAAMAAEAAAABAAEAAAAQAAEAAAAAAAEAAAALAAIAAAABAAEAAAAMAAIAAAABAAEAAAAQAAIAAAAAAAIAAAAKAAMAAAABAAMAAAALAAMAAAABAAMAAAAMAAMAAAABAAMAAAANAAMAAAADAAMAAAAOAAMAAAAFAAsAAAAPAAMAAAAHAAsAAAAQAAMAAAAAAAMAAAARAAMAAAABAAMAAAARAAAAAAAHAAAAAAAOAAIAAAAKAAIAAAAPAAIAAAAKAAIAAAAIAP//AAACAAAAAAAZAAAAAAAGAAAAAAAaAAAAAAAGAAAAAAAbAAAAAAAGAAAAAAAcAAAAAAAGAAAAAAAdAAAAAAAGAAAAAAAeAAAAAAAGAAAAAAAfAAAAAAAGAAAAAAAgAAAAAAAGAAAAAAAhAAAAAAAGAAAAAAAiAAAAAAAGAAAAAAAjAAAAAAAGAAAAAAAkAAAAAAAGAAAAAAAlAAAAAAAGAAAAAAAmAAAAAAAGAAAAAAAnAAAAAAAGAAAAAAAoAAAAAAAGAAAAAAApAAAAAAAGAAAAAAAqAAAAAAAGAAAAAAArAAAAAAAGAAAAAAAsAAAAAAAGAAAAAAAtAAAAAAAGAAAAAAAuAAAAAAAGAAAAAAAvAAAAAAAGAAAAAAAwAAAAAAAGAAAAAAAxAAAAAAAGAAAAAAAyAAAAAAAGAAAAAAAzAAAAAAAGAAAAAAA0AAAAAAAGAAAAAAA1AAAAAAAGAAAAAAA2AAAAAAAGAAAAAAA3AAAAAAAGAAAAAAA4AAAAAAAGAAAAAAA5AAAAAAAGAAAAAAA6AAAAAAAGAAAAAAA7AAAAAAAGAAAAAAA8AAAAAAAGAAAAAAA9AAAAAAAGAAAAAAA+AAAAAAAGAAAAAAA/AAAAAAAGAAAAAABAAAAAAAAGAAAAAABBAAAAAAAGAAAAAABCAAAAAAAGAAAAAABDAAAAAAAGAAAAAABEAAAAAAAGAAAAAABFAAAAAAAGAAAAAABGAAAAAAAGAAAAAABHAAAAAAAGAAAAAABIAAAAAAAGAAAAAABJAAAAAAAGAAAAAABKAAAAAAAGAAAAAABLAAAAAAAGAAAAAABMAAAAAAAGAAAAAABNAAAAAAAGAAAAAABOAAAAAAAGAAAAAABPAAAAAAAGAAAAAABQAAAAAAAGAAAAAABRAAAAAAAGAAAAAABSAAAAAAAGAAAAAABTAAAAAAAGAAAAAABUAAAAAAAGAAAAAABVAAAAAAAGAAAAAABWAAAAAAAGAAAAAABXAAAAAAAGAAAAAABYAAAAAAAGAAAAAABZAAAAAAAGAAAAAABaAAAAAAAGAAAAAABbAAAAAAAGAAAAAABcAAAAAAAGAAAAAABdAAAAAAAGAAAAAABeAAAAAAAGAAAAAABfAAAAAAAGAAAAAABgAAAAAAAGAAAAAABgAP//AAAGAAAAAABgAP7/AAAGAAAAAABgAP3/AAAGAAAAAABgAPz/AAAGAAAAAABgAPv/AAAGAAAAAABgAPr/AAAGAAAAAABgAPn/AAAGAAAAAABgAPj/AAAGAAAAAABgAPf/AAAGAAAAAABgAPb/AAAGAAAAAABgAPX/AAAGAAAAAABgAPT/AAAGAAAAAABgAPP/AAAGAAAAAABgAPL/AAAGAAAAAABgAPH/AAAGAAAAAAD8/wAAAAAGAAAAAAD7/wAAAAAGAAAAAAD6/wAAAAAGAAAAAAD5/wAAAAAGAAAAAAD4/wAAAAAGAAAAAAD3/wAAAAAGAAAAAAD2/wAAAAAGAAAAAAD1/wAAAAAGAAAAAAD1////AAAGAAAAAAD1//7/AAAGAAAAAAD1//3/AAAGAAAAAAD1//z/AAAGAAAAAAD1//v/AAAGAAAAAAD1//r/AAAGAAAAAAD1//n/AAAGAAAAAAD1//j/AAAGAAAAAAD1//f/AAAGAAAAAAD1//b/AAAGAAAAAAD1//X/AAAGAAAAAAD1//T/AAAGAAAAAAD1//P/AAAGAAAAAAA=")
tile_set = SubResource("TileSet_cqcdt")

[node name="Killzone" parent="." instance=ExtResource("3_26fjk")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("WorldBoundaryShape2D_jpru3")

[node name="Slime" parent="." instance=ExtResource("4_ly0ve")]
position = Vector2(515, 0)
scale = Vector2(1.25, 1.25)

[node name="Slime2" parent="." instance=ExtResource("4_ly0ve")]
position = Vector2(567, 0)
scale = Vector2(1.25, 1.25)

[node name="Slime3" parent="." instance=ExtResource("4_ly0ve")]
position = Vector2(291, 0)
scale = Vector2(1.25, 1.25)

[node name="BossSlime" parent="." instance=ExtResource("7_6iar6")]
position = Vector2(1296, 0)

[connection signal="death" from="Player" to="." method="_on_player_death"]
[connection signal="enemy_death" from="Slime" to="." method="_on_slime_enemy_death"]
[connection signal="enemy_death" from="Slime2" to="." method="_on_slime_enemy_death"]
[connection signal="enemy_death" from="Slime3" to="." method="_on_slime_enemy_death"]
[connection signal="enemy_death" from="BossSlime" to="." method="_on_boss_slime_enemy_death"]
